[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Interactables/Assets/PortalB.svg" type="Texture" id=1]
[ext_resource path="res://Assets/Interactables/Portal.gd" type="Script" id=2]
[ext_resource path="res://Assets/Interactables/Assets/PortalA.svg" type="Texture" id=3]
[ext_resource path="res://Assets/Interactables/Sounds/Teleport.wav" type="AudioStream" id=4]

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;
//if you need to get help with shaders just use chatgpt tbh it saves time learning how to use shaders
uniform vec4 tint_color: hint_color = vec4(1.0, 1.0, 1.0, 1.0);
uniform float difference: hint_range(0.0, 1.0) = 0.0;

void fragment() {
    vec4 tex = texture(TEXTURE, UV);
    
    vec3 tinted_color = mix(tex.rgb, tint_color.rgb, difference);
    
    COLOR.rgb = tinted_color;
    COLOR.a = tex.a;
}
"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/tint_color = Color( 0.556863, 0, 0, 1 )
shader_param/difference = 0.0

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;
//if you need to get help with shaders just use chatgpt tbh it saves time learning how to use shaders
uniform vec4 tint_color: hint_color = vec4(1.0, 1.0, 1.0, 1.0);
uniform float difference: hint_range(0.0, 1.0) = 0.0;

void fragment() {
    vec4 tex = texture(TEXTURE, UV);
    
    vec3 tinted_color = mix(tex.rgb, tint_color.rgb, difference);
    
    COLOR.rgb = tinted_color;
    COLOR.a = tex.a;
}
"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )
shader_param/tint_color = Color( 1, 1, 1, 1 )
shader_param/difference = 0.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19.75, 60 )

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;
//if you need to get help with shaders just use chatgpt tbh it saves time learning how to use shaders
uniform vec4 tint_color: hint_color = vec4(1.0, 1.0, 1.0, 1.0);
uniform float difference: hint_range(0.0, 1.0) = 0.0;

void fragment() {
    vec4 tex = texture(TEXTURE, UV);
    
    vec3 tinted_color = mix(tex.rgb, tint_color.rgb, difference);
    
    COLOR.rgb = tinted_color;
    COLOR.a = tex.a;
}
"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/tint_color = Color( 1, 1, 1, 1 )
shader_param/difference = 0.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19.75, 60 )

[node name="Portal" type="Node2D"]
material = SubResource( 4 )
script = ExtResource( 2 )

[node name="Portal_A" type="Position2D" parent="."]

[node name="Texture" type="Sprite" parent="Portal_A"]
material = SubResource( 6 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="HitboxA" type="Area2D" parent="Portal_A"]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portal_A/HitboxA"]
position = Vector2( 8.25, 0 )
shape = SubResource( 1 )

[node name="Portal_B" type="Position2D" parent="."]
position = Vector2( 0, -121 )

[node name="Texture" type="Sprite" parent="Portal_B"]
show_behind_parent = true
material = SubResource( 8 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="HitboxB" type="Area2D" parent="Portal_B"]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portal_B/HitboxB"]
position = Vector2( 8.25, 0 )
shape = SubResource( 2 )

[node name="Cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="TeleportSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="Portal_A/HitboxA" to="." method="_on_HitboxA_body_entered"]
[connection signal="body_entered" from="Portal_B/HitboxB" to="." method="_on_HitboxB_body_entered"]
[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
